<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/nav_explore"
        android:title="@string/title_map"
        />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/nav_favorite"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_user_profile"
        android:icon="@drawable/nav_profile"
        android:title="@string/title_user_profile" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/nav_more"
        android:title="About" />

</menu>
