...
    <string name="kennyName">"Kenny Tang"</string>
    <string name="kennyBiography">"Major: Electrical and Computer Engineering \nBio: What's up, I'm Kenny. I love playing Ultimate Frisbee, programming in C, and eating every type of food.\nResponsibilities: Full Stack\nNumber of unit tests: 0"</string>
    <string name="yasiraName">"Yasira Younus"</string>
    <string name="yasiraBiography">"Major: Electrical and Computer Engineering \nBio: Hi, I am Yasira, and I love coding and memes\nResponsibilities: UI setup\nNumber of unit tests: 0"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_map">Explore</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_user_profile">User Profile</string>
    <string name="title_login">Login</string>
    <string name="abtTitle">About Us</string>
    <string name="abtGroupName">Team Lavender</string>
    <string name="title_more">More</string>

    <string name="title_activity_register">RegisterActivity</string>
...
